Fix overflow issue on infowindow

--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,7 @@ th {
       cursor: pointer; }
     .list-item .content-container .info-column {
       padding-right: 10px;
-      max-width: 200px; }
+      flex: 1; }
       .list-item .content-container .info-column .venue-name {
         margin-bottom: 3px;
         cursor: pointer; }
@@ -474,7 +474,8 @@ th {
   display: flex;
   max-width: 250px;
   font-family: "proxima_nova_regular", Helvetica, sans-serif;
-  padding-right: 10px; }
+  padding-right: 10px;
+  overflow: auto; }
 
 .iw-photo {
   background: #f7b600;
@@ -482,7 +483,8 @@ th {
   border-radius: 40px; }
 
 .iw-content {
-  padding-left: 1rem; }
+  padding-left: 1rem;
+  flex: 1; }
 
 .iw-title {
   margin: 0 0 0.5rem;
